--- a/part2/Makefile
+++ b/part2/Makefile
@@ -1,28 +1,23 @@
 KDIR:= /opt/iot-devkit/1.7.3/sysroots/i586-poky-linux/usr/src/kernel
 PWD:= $(shell pwd)
 
-CC = /opt/iot-devkit/1.7.3/sysroots/x86_64-pokysdk-linux/usr/bin/i586-poky-linux/i586-poky-linux-gcc
-ARCH = x86
-CROSS_COMPILE = i586-poky-linux-
-#SROOT = /opt/iot-devkit/1.7.3/sysroots/x86_64-pokysdk-linux/usr/bin/i586-poky-linux
-#/opt/iot-devkit/1.7.3/sysroots/i586-poky-linux/usr/src/kernel
-
+#SROOT:= /opt/iot-devkit/1.7.3/sysroots/x86_64-pokysdk-linux/usr/bin/i586-poky-linux
 
 obj-m:= sharedQueue.o
-sharedQueue-objs := sharedQueue.o Assignment1_part2.o
-
 
 all:
-	make -C $(KDIR) M=$(PWD) modules
+	make -C /lib/modules/$(shell uname -r)/build $(KDIR) M=$(PWD) modules
 
-	#/opt/iot-devkit/1.7.3/sysroots/x86_64-pokysdk-linux/usr/bin/i586-poky-linux-gcc Assignment1_part2.c -pthread --sysroot=$(SROOT) 
+	#gcc -o assignment1 assignment1_part2.c --sysroot=$(SROOT) -pthread
+	#make -C $(KDIR) M=$(PWD) modules
 
 clean: 
 	rm -f *.o
 	rm -f *.ko
 	rm -f *.mod.c
-	rm -fr *.order
-	rm -fr *.symvers
+	rm -f modules.order
+	rm -f Module.symvers
 	rm -rf .tmp_versions
 	rm -f *.mod.o
-	rm -f *.cmd
+	rm -f \.*.cmd
+	rm -f Module.markers
